# SQL-BigBrother---Multi-Agent-Database-Intelligence-Platform

./: .gitignore  Dockerfile  README.md  create_ecommerce_db.py  docker-compose.yml  frontend.sh  pyproject.toml  requirements.txt  run_server.py  setup.sh  start_all.sh
conf/base/: catalog.yml  parameters.yml
src/sql_bigbrother/: __init__.py  __main__.py  api  pipeline_registry.py  settings.py
src/sql_bigbrother/core/: README.md  __init__.py
src/sql_bigbrother/core/api/: main.py
src/sql_bigbrother/core/api/prompts/: agents.py  configs.py  models.py
src/sql_bigbrother/core/api/services/: resolvers.py
src/sql_bigbrother/core/api/sql/: cinema.sql  club.sql  employee.sql  ezticket.sql  restaurant.sql  shop.sql
src/sql_bigbrother/core/auth/: package-lock.json
src/sql_bigbrother/core/auth/src/: app.js
src/sql_bigbrother/core/auth/src/configs/: index.js
src/sql_bigbrother/core/frontend/: Dockerfile  index.html  package-lock.json  package.json
src/sql_bigbrother/core/frontend/src/: App.jsx  index.css
src/sql_bigbrother/core/frontend/src/data/: pricing.json
src/sql_bigbrother/core/frontend/src/firebase/: config.example.js
src/sql_bigbrother/core/frontend/src/hooks/: useCatch.js
src/sql_bigbrother/core/frontend/src/layouts/: Main.jsx  Second.jsx
src/sql_bigbrother/core/frontend/src/pages/: Chat.jsx  (+3 more)
src/sql_bigbrother/pipelines/sql_processing/: __init__.py  nodes.py  pipeline.py
src/sql_bigbrother/pipelines/sql_processing/prompts/: agents.py  configs.py  tasks.py
src/sql_bigbrother/pipelines/sql_processing/services/: database.py  resolvers.py
(+13 files in other folders)
